Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
Impala 2.0
-
None
-
None
Description
A query with a union all in an inline view does not request any resources (the estimated resources per the explain plan are reasonable). Removing either the inline view or the union leads to correct behaviour.
select * from tpch.lineitem union all select * from tpch.lineitem -> Reservation Request(queue=root.henry user=henry gang=1 request_timeout=300000 resources=[Resource(client_resource_id=4c470e6ff4c1fc9a:b1f933f7fccd7b9 v_cpu_cores=1 memory_mb=256 asked_location=localhost:31000 enforcement=0)])
select * from (select * from tpch.lineitem union all select * from tpch.lineitem) -> Reservation Request(queue=root.henry user=henry gang=1 request_timeout=300000 resources=[])