IMPALA-1236: Always populate unique hosts in ComputeFragmentExecParams()

The set of unique hosts is used, amongst other things, to determine
which nodes to ask for resources from Llama for. It's built in
ComputeFragmentExecParams(), but some special cases (particularly for
union nodes) were failing to properly populate the set. This patch fixes
the problem.

Change-Id: Iad90a3d2d5055428a849b27f0655eca431627ef0
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/4620
Reviewed-by: Daniel Hecht <dhecht@cloudera.com>
Reviewed-by: Alex Behm <alex.behm@cloudera.com>
Tested-by: jenkins
(cherry picked from commit 4f69f5994672d614f4a97b25f023a8f328d3f159)
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/4653
Reviewed-by: Henry Robinson <henry@cloudera.com>